made images bigger, fixed shift bug

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -10,6 +10,10 @@ body {
   z-index: 9999999;
 }
 
+.modal-image {
+  width: 800px;
+}
+
 
 @import "bootstrap-responsive";
 @import "bootstrap/image-gallery";
